--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: 记录工作中的一点思考
+email: hy05190134@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am an engineer of CDN development in UPYUN.COM which is a CDN company of China. I just write some thinking of works in CDN and record in this blog. I believe small is just beauty.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.hy05190134.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: hdu_yang
+github_username:  hy05190134
 
 # Build settings
 markdown: kramdown
