--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: 记录工作中的一点思考
 email: hy05190134@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I am an engineer of openresty development in CSCREEN.COM which is a security company of China. I just write some thinking of works in openresty and record in this blog. I believe small is just beauty.
+  I am an engineer of openresty development in CLOUDSCREEN.COM which is a security company of China. I just write some thinking of works in openresty and record in this blog. I believe small is just beauty.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.hy05190134.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hdu_yang
