--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+paginate: 5
 title: 记录工作中的一点思考
 email: hy05190134@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -21,6 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.hy05190134.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hdu_yang
 github_username:  hy05190134
+img: https://www.laobuluo.com/banner/upyun.png
 
 # Build settings
 markdown: kramdown
