--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,15 @@ markdown: kramdown
 theme: minima
 gems:
   - jekyll-feed
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+paginate: 5
+paginate_path: "/blog/p:num"
+
 exclude:
   - Gemfile
   - Gemfile.lock
