--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ theme: minima
 gems:
   - jekyll-feed
 
-paginate: 5
+gems: [jekyll-paginate]
+
+paginate: 10
 paginate_path: "page:num"
 
 exclude:
