--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ gems: [jekyll-paginate]
 paginate: 10
 paginate_path: "page:num"
 
+disqus:
+  shortname: test
+
 exclude:
   - Gemfile
   - Gemfile.lock
